Front end fix, word wrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -406,6 +406,7 @@ h2 {
 					font-size: 16px;
 					font-weight: 100;
 					line-height: 20px;
+					word-wrap: break-word;
 				}
 			}
 		}
